Update memory map with missing entries.
Also add callback to metronome slider change so it updates the named
tempo dropdown on change.

--- a/fp30remote.html
+++ b/fp30remote.html
@@ -131,21 +131,45 @@ const addressmap = {
     0x0100010f: {name: 'metronome_status',
                  length: 1,
                  type: 'checkbox'},
-    0x01000110: {name: 'speaker_disabled',
+    0x01000110: {name: 'speaker_mode',
                  length: 1,
-                 type: 'checkbox'},
+                 type: 'list'},
     0x01000200: {name: 'keyboard_mode',
-                 length: 1 },
+                 length: 1,
+                 callback: toggleKeyboardMode},
     0x01000201: {name: 'keyboard_split_point',
-                 length: 1 },
-    // ...
+                 length: 1,
+                 callback: keyboardSplitNoteName},
+    0x01000202: {name: 'split_leftshift',
+                 length: 1,
+                 offset: 0x40 },
+    0x01000203: {name: 'split_balance',
+                 length: 1,
+                 offset: 0x40 },
+    0x01000204: {name: 'dual_tone2shift',
+                 length: 1,
+                 offset: 0x40},
+    0x01000205: {name: 'dual_balance',
+                 length: 1,
+                 offset: 0x40},
+    0x01000206: {name: 'twin_mode',
+                 length: 1,
+                 type: 'list'},
     0x01000207: {name: 'tone',
+                 length: 3,
+                 type: 'list'},
+    0x0100020a: {name: 'tone_split',
+                 length: 3,
+                 type: 'list'},
+    0x0100020d: {name: 'tone_dual',
                  length: 3,
                  type: 'list'},
     0x01000213: {name: 'volume',
                  length: 1 },
     0x01000218: {name: 'tuning',
-                 length: 2 },
+                 length: 2,
+                 offset: 256 - 4400,
+                 fraction: 1},
     0x0100021a: {name: 'ambience',
                  length: 1 },
     0x0100021c: {name: 'brilliance',
@@ -165,7 +189,8 @@ const addressmap = {
                  offset: 0x40,
                  length: 1 },
     0x01000309: {name: 'metronome_tempo',
-                 length: 2 },
+                 length: 2,
+                 callback: setMetronomeNamed},
     0x01000509: {name: 'metronome_enabled',
                  length: 1,
                  type: 'checkbox'},
