Fix address map initialization.

--- a/fp30remote.html
+++ b/fp30remote.html
@@ -135,11 +135,9 @@ const addressmap = {
                  length: 1,
                  type: 'list'},
     0x01000200: {name: 'keyboard_mode',
-                 length: 1,
-                 callback: toggleKeyboardMode},
+                 length: 1},
     0x01000201: {name: 'keyboard_split_point',
-                 length: 1,
-                 callback: keyboardSplitNoteName},
+                 length: 1},
     0x01000202: {name: 'split_leftshift',
                  length: 1,
                  offset: 0x40 },
