More button restyling.

--- a/fp30remote.html
+++ b/fp30remote.html
@@ -48,7 +48,12 @@ input[type=checkbox] {
 
 button {
     background-color: #fff;
-    color: #000;
+    border: 0px solid;
+    font-size: 12pt;
+    font-weight: bold;
+    color: #4d9fff;
+    padding: 12px;
+    align: center;
 }
 
 div {
