Add DejaVu Sans as default font.

--- a/fp30remote.html
+++ b/fp30remote.html
@@ -10,7 +10,7 @@
 
     <style>
 body {
-    font-family: verdana,sans-serif;
+    font-family: "DejaVu Sans";verdana,sans-serif
     font-size: 14pt;
     user-select: none;
     background: #fff;
